Fixing the spacing between the title and taglines

--- a/css/site.css
+++ b/css/site.css
@@ -27,7 +27,7 @@ body {
 	font-size: 36pt;
 	min-width: 415px;
 	overflow: visible;
-	margin-bottom: 40px;
+	margin-bottom: 100px;
 }
 
 .name {
